--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ledger</h5>
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">{{ request.user }}</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
