--- a/templates/nav.html
+++ b/templates/nav.html
@@ -28,8 +28,8 @@
                 Dropdown
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Create</a></li>
-                <li><a class="dropdown-item" href="#">Detail</a></li>
+                <li><a class="dropdown-item" href="{% url 'ledgers:create' %}">Create</a></li>
+                <li><a class="dropdown-item" href="{% url 'ledgers:index' %}">Index</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
