base, nav 링크작업 [hj]

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Ledgers</a>
+      <a class="navbar-brand" href="{% url 'main' %}">Ledgers</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
