--- a/ledgers/templates/ledgers/detail.html
+++ b/ledgers/templates/ledgers/detail.html
@@ -9,7 +9,11 @@
   <div class="card p-5 w-75 m-auto">
     <h3>{{ ledger.title }}</h3>
     <p>
-        <span class="text-muted">{{ ledger.paid_at|date:"y-m-d H:i" }}</span> <span><a href="{% url 'ledgers:update' ledger.pk %}" style="text-decoration:none; color:black; font-weight:bold;">🖊</a> / <a href="{% url 'ledgers:delete' ledger.pk %}" style="text-decoration:none; color:black; font-weight:bold;">🗑</a></span>
+      <span class="text-muted">{{ ledger.paid_at|date:"y-m-d H:i" }}</span> 
+      <span>
+        <a href="{% url 'ledgers:update' ledger.pk %}" style="text-decoration:none; color:black; font-weight:bold;">🖊</a> / 
+        <a href="{% url 'ledgers:delete' ledger.pk %}" style="text-decoration:none; color:black; font-weight:bold;">🗑</a>
+      </span>
     </p>
     <hr>
     <p><pre style="font-family: 'Noto Sans KR', sans-serif">{{ ledger.content }}</pre></p>
