--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,22 @@
 </head>
 <body>
   {% include "nav.html" %}
+  {% if messages %}
+  {% for message in messages %}
+  <div class="toast show text-bg-{{ message.tags }} mb-3" aria-live="assertive" aria-atomic="true"
+    style="position: relative; top: 2rem; left: 2rem; z-index:3;">
+    <div class="toast-header">
+      <strong class="me-auto">알림
+      </strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      {{ message }}
+    </div>
+  </div>
+  {% endfor %}
+  {% endif %}
+  
   <div class="container">
     {% block content %}
     {% endblock content %}
